# qwen-omni-duplex

omni-to-duplex/: .gitignore  adapter_example.ipynb  data_util.py  extract_features.py  extract_features.sh  main.py  model.py  model_for_training.py  pyproject.toml  test.py  train_adaptor.py  train_adaptor.sh  train_adaptor_on_embeddings.py  train_adaptor_with_lag.sh  train_duplex_model.py
omni-to-duplex/configs/: adaptor_config.json  adaptor_decoder_config.json  code_predictor_config.json  debug.json  fsdp-config-4-gpu.yaml  fsdp-config-8-gpu.yaml  fsdp_config_2_gpu.yaml  mimi-to-qwen2_5-3b-adaptor-config.json  qwen3-30b-a3b-adaptor-config.json  viola-to-qwen3-30b-a3b-adaptor-config.json
omni-to-duplex/scripts/: train_adaptor.sh  train_adaptor_embedding_sft.sh  train_adaptor_embedding_sft_with_lag.sh  train_adaptor_on_embeddings.sh  train_adaptor_on_embeddings_with_lag.sh  train_adaptor_on_embeddings_with_lag_2.sh  train_adaptor_on_embeddings_with_lag_4.sh  train_duplex_model.sh
omni-to-duplex/train/: adaptor_embedding_sft.py
omni-to-duplex/trainer_output/runs/Oct11_13-29-47_ip-10-0-28-200/: events.out.tfevents.1760189390.ip-10-0-28-200.1557026.0
omni-to-duplex/trainer_output/runs/Oct11_13-31-45_ip-10-0-28-200/: events.out.tfevents.1760189509.ip-10-0-28-200.1557515.0
omni-to-duplex/trainer_output/runs/Oct11_13-35-39_ip-10-0-28-200/: events.out.tfevents.1760189742.ip-10-0-28-200.1558363.0
