[project]
name = "omni-to-duplex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "moshi>=0.2.11",
    "pydantic>=2.12.0",
    "qwen-omni-utils>=0.0.8",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers==4.52.3",
]
