[project]
name = "omni-to-duplex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "datasets",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "ms-swift",
    "pydantic>=2.12.0",
    "qwen-omni-utils>=0.0.8",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]
[tool.uv.sources]
ms-swift = { git = "https://github.com/ethanewer/ms-swift-omni-to-duplex.git" }

